refactor: updateWidgets + update docs
